# xdiff-ext

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  xdiff-ext.desktop.in
diff-ext/: Makefile.am  Makefile.in
diff-ext/src/: Makefile.am  Makefile.in  main.c  submenu-action.c  submenu-action.h
po/: POTFILES.in  da.po  de.po  es.po  fr.po  gl.po  it.po  nb.po  pl.po  pt.po  pt_BR.po  ru.po  uk.po  xdiff-ext.pot  zh_CN.po
preferences/: Makefile.am  Makefile.in  preferences.c  preferences.h
setup/: Makefile.am  Makefile.in
setup/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  main.c  setup.glade  setup.gladep
